--- a/newsWebsite/src/main/webapp/css/style.css
+++ b/newsWebsite/src/main/webapp/css/style.css
@@ -12,7 +12,7 @@ main {
 }
 
 .bk-book {
-    background-image: url("assets/bklivro.png");
+    background-image: url("/assets/bklivro.png");
     background-size: cover; 
     background-position: center; 
 }
