feat: Criacao do front da pagina de listar noticias por categoria

--- a/newsWebsite/src/main/webapp/css/style.css
+++ b/newsWebsite/src/main/webapp/css/style.css
@@ -11,8 +11,8 @@ main {
     margin: 2%
 }
 
-.bk-book {
-    background-image: url("assets/bklivro.png");
+.bk-news {
+    background-image: url("../assets/news-background.jpeg");
     background-size: cover; 
     background-position: center; 
 }
