--- a/newsWebsite/src/main/webapp/assets/css/style.css
+++ b/newsWebsite/src/main/webapp/assets/css/style.css
@@ -25,7 +25,7 @@ main {
 
 
 .form-container {
-    width: 70%;
+    width: 80%;
     margin-top: 5%;
 }
 
@@ -34,8 +34,7 @@ footer {
 }
 
 .container-login {
-    background-color: darkgrey;
-    border-radius: 15px;
+    background-color: transparent;
 }
 
 .img-news {
