--- a/newsWebsite/src/main/webapp/views/category/listCategory.html
+++ b/newsWebsite/src/main/webapp/views/category/listCategory.html
@@ -1,20 +1,19 @@
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/functions" prefix="fn" %>
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-         pageEncoding="UTF-8" %>
-
-<%@ include file="includes/navbar/header-default.jsp" %>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>IFNews</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="${pageContext.request.contextPath}/assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="${pageContext.request.contextPath}/assets/images/IFNews.ico">
+  </head>
+  <body>
 
 
 <!-- Navbar -->
-<c:choose>
-    <c:when test="${sessionScope.isLogged == true}">
-        <c:import url="includes/navbar/navbar-logged-in.jsp"/>
-    </c:when>
-    <c:otherwise>
-        <c:import url="includes/navbar/navbar-logged-out.jsp"/>
-    </c:otherwise>
-</c:choose>
+<div id="nav-bar"></div>
 
 
 <main class="container">
@@ -78,6 +77,10 @@
     </c:if>
 
 </main>
+<div id="footer"></div>
 
-<c:import url="includes/footer/footer.jsp"/>
-<c:import url="includes/footer/footer-default.jsp"/>
+<script src="js/components/navbar.js" type="module"></script>
+<script src="js/components/footer.js" type="module"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
