--- a/newsWebsite/src/main/webapp/views/news/createNewsArticle.html
+++ b/newsWebsite/src/main/webapp/views/news/createNewsArticle.html
@@ -1,15 +1,25 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-         pageEncoding="UTF-8" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ include file="includes/navbar/header-default.jsp" %>
-<%@ include file="includes/navbar/navbar-logged-in.jsp" %>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>IFNews</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="${pageContext.request.contextPath}/assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="${pageContext.request.contextPath}/assets/images/IFNews.ico">
+  </head>
+  <body>
+
+<div id="nav-bar"></div>
+
 
 <c:if test="${sessionScope.isLogged == false}">
-    <c:redirect url="errors/401.jsp"/>
+    <c:redirect url="../../errors/401.html"/>
 </c:if>
 
 
-<%--o atributo isLoaded é um booleano que indica a passagem pelo /utilServlet--%>
+<!-- o atributo isLoaded é um booleano que indica a passagem pelo /utilServlet -->
 
 <c:if test="${empty isLoaded}">
     <c:redirect url="/utilServlet"/>
@@ -17,7 +27,7 @@
 
 
 <c:if test="${empty categoryList}">
-    <c:redirect url="index.html"/>
+    <c:redirect url="../../index.html"/>
 </c:if>
 
 
@@ -77,5 +87,9 @@
 
 </main>
 
-<%@ include file="includes/footer/footer.jsp" %>
-<%@ include file="includes/footer/footer-default.jsp" %>
+<div id="footer"></div>
+<script src="js/components/navbar.js" type="module"></script>
+<script src="js/components/footer.js" type="module"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
