--- a/newsWebsite/src/main/webapp/views/user/signup.html
+++ b/newsWebsite/src/main/webapp/views/user/signup.html
@@ -1,12 +1,18 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-         pageEncoding="UTF-8" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ include file="includes/navbar/header-default.jsp" %>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>IFNews</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/IFNews.ico">
+  </head>
+  <body>
 
 <main class="container">
-    <c:if test="${not empty error}">
-        <div class="alert alert-danger" role="alert">${error}</div>
-    </c:if>
+    <div id="error-message" class="alert alert-danger" role="alert" style="display: none;"></div>
 
     <div class="d-flex flex-column justify-content-center align-items-center pt-1 pb-5 my-5 border">
 
@@ -15,7 +21,7 @@
         <div class="container form-container">
             <div class="row justify-content-center">
                 <div class="col-md-6 col-lg-4">
-                    <form action="signupUser" method="post">
+                    <form action="signupUser" method="post" id="signupForm">
                         <div class="mb-3">
                             <label for="username" class="form-label">Nome</label>
                             <input class="form-control" id="username" name="username">
@@ -36,5 +42,7 @@
     </div>
 </main>
 
-
-<%@ include file="includes/footer/footer-default.jsp" %>
+<script src="../../assets/js/user/signup.js" type="module"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
