--- a/newsWebsite/src/main/webapp/views/category/createCategory.html
+++ b/newsWebsite/src/main/webapp/views/category/createCategory.html
@@ -6,27 +6,20 @@
     <title>IFNews</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="${pageContext.request.contextPath}/assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="${pageContext.request.contextPath}/assets/images/IFNews.ico">
+    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/IFNews.ico">
   </head>
   <body>
 
-
-<c:if test="${sessionScope.isLogged == false}">
-    <c:redirect url="../../errors/401.html"/>
-</c:if>
-
 <main class="container">
 
-    <c:if test="${not empty error}">
-        <div class="alert alert-danger" role="alert">${error}</div>
-    </c:if>
+    <div id="error-message" class="alert alert-danger mt-3" style="display: none;"></div>
 
     <div class="container-login pt-1 pb-5 my-5">
         <h1 class="my-5 text-center">Criar Categoria</h1>
 
         <div class="container form-container">
-            <form action="createCategory" method="post">
+            <form method="post" id="createCategoryForm">
                 <div class="mb-3">
                     <label for="category" class="form-label">Nome</label>
                     <input class="form-control" id="category" name="category">
@@ -41,7 +34,9 @@
 
 <div id="footer"></div>
 
-<script src="js/components/footer.js" type="module"></script>
+<script src="../../assets/js/components/footer.js" type="module"></script>
+<script src="../../assets/js/category/createCategory.js" type="module"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
