--- a/newsWebsite/src/main/webapp/views/news/news.html
+++ b/newsWebsite/src/main/webapp/views/news/news.html
@@ -7,31 +7,44 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="/assets/images/IFNews.ico"> 
+    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/IFNews.ico">
 </head>
 <body>
     <div id="nav-bar"></div>
-
     <main class="container">
 
-    <div class="carousel-container">
-        <div class="carousel-slide" id="carousel-slide">
-            <!-- Imagens serão inseridas aqui pelo JS -->
+
+
+
+        <!-- Carrossel de Imagens -->
+        <div id="newsCarousel" class="carousel slide mb-3" data-bs-ride="carousel">
+            <div class="carousel-inner bg-dark rounded" id ="carouselInner">
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#newsCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#newsCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <button class="carousel-btn" id="prevBtn">⟵</button>
-        <button class="carousel-btn" id="nextBtn">⟶</button>
-    </div>
+
+        <div id="edit-news"></div>
+
+        <div id="news-details"></div>
+
+        <div id="comments"></div>
+
+
 
 </main>
     <div id="footer"></div>
 
-    <script src="/assets/js/components/navbar.js" type="module"></script>
-    <script src="/assets/js/components/footer.js" type="module"></script>
-    <script src="/assets/js/news/news.js" type="module"></script>
-    <script>
-        const images = JSON.parse('<%= new Gson().toJson((List<String>) request.getAttribute("images")) %>');
-    </script>
+    <script src="../../assets/js/components/navbar.js" type="module"></script>
+    <script src="../../assets/js/components/footer.js" type="module"></script>
+    <script src="../../assets/js/news/news.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
