--- a/newsWebsite/src/main/webapp/views/news/newsSearch.html
+++ b/newsWebsite/src/main/webapp/views/news/newsSearch.html
@@ -1,45 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IFNews</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>News</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="${pageContext.request.contextPath}/assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="${pageContext.request.contextPath}/assets/images/IFNews.ico">
-  </head>
-  <body>
-
-
+    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/IFNews.ico">
+</head>
+<body>
     <div id="nav-bar"></div>
+        <main class="container">
+            <h1 class="my-5 text-center">Notícias</h1>
+            <div id="news">
+                <div class="p-4 p-md-5 mb-4 rounded border text-body-emphasis bg-body-tertiary" id="newsSearched">
 
-<h1 class="my-5 text-center">Notícias</h1>
-
-<main class="container">
-    <c:if test="${not empty listNews}">
-        <c:forEach var="news" items="${listNews}">
-            <div class="p-4 p-md-5 mb-4 rounded border text-body-emphasis bg-body-tertiary">
-                <div class="col-lg-6 px-0">
-                    <h1 class="display-4 fst-italic">${news.title}</h1>
-                    <p class="lead my-3">${news.summary}</p>
-                    <p class="lead my-3">Autor: ${news.author}</p>
-                    <p class="lead mb-0"><a href="news?id=${news.id}" class="fw-bold">Continue lendo...</a></p>
                 </div>
             </div>
-        </c:forEach>
-    </c:if>
-    <c:if test="${empty listNews}">
-        <div class="alert alert-warning" role="alert">
-            Nenhuma notícia encontrada para a busca realizada.
-        </div>
-    </c:if>
-</main>
+        </main>
 
-<div id="footer"></div>
+    <div id="footer"></div>
 
-<script src="js/components/navbar.js" type="module"></script>
-<script src="js/components/footer.js" type="module"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../../assets/js/components/navbar.js" type="module"></script>
+    <script src="../../assets/js/components/footer.js" type="module"></script>
+    <script src="../../assets/js/news/searchNews.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </body>
 </html>
