--- a/newsWebsite/src/main/webapp/views/category/listCategory.html
+++ b/newsWebsite/src/main/webapp/views/category/listCategory.html
@@ -1,86 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IFNews</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="${pageContext.request.contextPath}/assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="${pageContext.request.contextPath}/assets/images/IFNews.ico">
-  </head>
-  <body>
+    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/IFNews.ico">
+</head>
+<body>
 
-
-<!-- Navbar -->
 <div id="nav-bar"></div>
-
 
 <main class="container">
 
     <h1 class="my-5 text-center">Notícias por Categoria</h1>
 
-    <c:if test="${not empty error}">
-        <div class="alert alert-danger" role="alert">${error}</div>
-    </c:if>
 
-    <!-- Botao para criar categoria-->
-    <c:if test="${sessionScope.isLogged == true}">
-        <div class="d-flex justify-content-start my-3">
-            <a href="createCategory" class="btn btn-primary">Criar categoria</a>
-        </div>
-    </c:if>
+    <div id="error-message"></div>
 
 
-    <c:if test="${not empty map}">
-        <c:forEach var="entry" items="${map}">
-            <div class="d-flex justify-content-between align-items-center border border-secondary rounded px-2 py-2">
-                <h2 class="me-4">${entry.key.category}</h2>
-                <c:if test="${sessionScope.isLogged == true}">
-                    <div>
-                        <a href="deleteCategory?id=${entry.key.id}" class="btn btn-danger">Excluir</a>
-                        <a href="updateCategory?id=${entry.key.id}" class="btn btn-warning">Editar</a>
-                    </div>
-                </c:if>
-            </div>
+    <div id="edit-category"></div>
 
-            <c:if test="${empty entry.value}">
-                <li class="text-danger my-3">Nenhuma notícia cadastrada</li>
-            </c:if>
 
-            <c:set var="counter" value="0"/>
-            <c:forEach var="newsArticle" items="${entry.value}">
-
-                <c:if test="${counter % 4 == 0}">
-                    <div class="row my-3">
-                </c:if>
-
-                <div class="col-sm-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">${newsArticle.title}</h5>
-                            <p class="card-text">Autor: ${newsArticle.author} </p>
-                            <p class="card-text">Publicado em: ${newsArticle.publishDate} </p>
-                            <a href="news?id=${newsArticle.id}" class="btn btn-primary">Leia mais</a>
-                        </div>
-                    </div>
-                </div>
-
-                <c:set var="counter" value="${counter + 1}"/>
-
-                <c:if test="${counter % 4 == 0 || counter == fn:length(entry.value)}">
-                    </div>
-                </c:if>
-
-            </c:forEach>
-        </c:forEach>
-    </c:if>
+    <div id="news-by-category"></div>
 
 </main>
 <div id="footer"></div>
 
-<script src="js/components/navbar.js" type="module"></script>
-<script src="js/components/footer.js" type="module"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+<script src="../../assets/js/components/navbar.js" type="module"></script>
+<script src="../../assets/js/components/footer.js" type="module"></script>
+<script src="../../assets/js/category/listCategory.js" type="module"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
