--- a/newsWebsite/src/main/webapp/views/user/signup.html
+++ b/newsWebsite/src/main/webapp/views/user/signup.html
@@ -21,7 +21,7 @@
         <div class="container form-container">
             <div class="row justify-content-center">
                 <div class="col-md-6 col-lg-4">
-                    <form action="signupUser" method="post" id="signupForm">
+                    <form action="signup" method="post" id="signupForm">
                         <div class="mb-3">
                             <label for="username" class="form-label">Nome</label>
                             <input class="form-control" id="username" name="username">
