ajustes nas telas de listagem, atualizacao e remocao de categorias

--- a/newsWebsite/src/main/webapp/views/category/listCategory.html
+++ b/newsWebsite/src/main/webapp/views/category/listCategory.html
@@ -18,12 +18,9 @@
 
     <h1 class="my-5 text-center">Notícias por Categoria</h1>
 
+    <div id="message"></div>
 
-    <div id="error-message"></div>
-
-
-    <div id="edit-category"></div>
-
+    <div id="create-category"></div>
 
     <div id="news-by-category"></div>
 
