--- a/newsWebsite/src/main/webapp/views/category/updateCategory.html
+++ b/newsWebsite/src/main/webapp/views/category/updateCategory.html
@@ -1,48 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IFNews</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="${pageContext.request.contextPath}/assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="${pageContext.request.contextPath}/assets/images/IFNews.ico">
-  </head>
-  <body>
-    <div id="nav-bar"></div>
-<c:if test="${sessionScope.isLogged == false}">
-    <c:redirect url="../../errors/401.html"/>
-</c:if>
+    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/IFNews.ico">
+</head>
+<body>
+<div id="nav-bar"></div>
 
 <main class="container">
 
-    <c:if test="${not empty error }">
-        <div class="alert alert-danger" role="alert">${error}</div>
-    </c:if>
+    <div id="error-message"></div>
 
-    <h1>Editar categoria</h1>
-    <form action="updateCategory" method="post">
-        <input type="hidden" name="id" value="${category.id}">
-
-        <div class="row my-1 align-items-center">
-            <div class="col-2">
-                <label for="categoryName" class="form-label"> Categoria: </label>
-            </div>
-            <div class="col-8">
-                <input name="categoryName" class="form-control" value="${category.category}">
-            </div>
-        </div>
-
-        <button class="btn btn-primary">Enviar</button>
-    </form>
-
+    <div id="update-category"></div>
 
 </main>
 <div id="footer"></div>
 
-<script src="js/components/navbar.js" type="module"></script>
-<script src="js/components/footer.js" type="module"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="../../assets/js/components/navbar.js" type="module"></script>
+<script src="../../assets/js/components/footer.js" type="module"></script>
+<script src="../../assets/js/category/updateCategory.js" type="module"></script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
