--- a/newsWebsite/src/main/webapp/views/news/createNewsArticle.html
+++ b/newsWebsite/src/main/webapp/views/news/createNewsArticle.html
@@ -1,46 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IFNews</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="${pageContext.request.contextPath}/assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="${pageContext.request.contextPath}/assets/images/IFNews.ico">
-  </head>
-  <body>
+    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/IFNews.ico">
+</head>
+<body>
 
 <div id="nav-bar"></div>
 
-
-<c:if test="${sessionScope.isLogged == false}">
-    <c:redirect url="../../errors/401.html"/>
-</c:if>
-
-
-<!-- o atributo isLoaded é um booleano que indica a passagem pelo /utilServlet -->
-
-<c:if test="${empty isLoaded}">
-    <c:redirect url="/utilServlet"/>
-</c:if>
-
-
-<c:if test="${empty categoryList}">
-    <c:redirect url="../../index.html"/>
-</c:if>
-
-
 <main class="container">
 
-    <c:if test="${not empty error}">
-        <div class="alert alert-danger" role="alert">${error}</div>
-    </c:if>
+    <div id="error-message"></div>
 
     <h1 class="my-5 text-center">Criar Notícia</h1>
 
+    <div id="create-news"></div>
+
     <div class="container form-container">
-        <form action="createNewsArticle" method="post">
+        <form method="post" id="createNewsForm">
             <div class="mb-3">
                 <label for="title" class="form-label">Título</label>
                 <input type="text" class="form-control" id="title" name="title" required>
@@ -67,11 +50,7 @@
             </div>
             <div class="mb-3">
                 <label for="category" class="form-label">Categoria</label>
-                <select class="form-select" id="category" name="category" required>
-                    <c:forEach var="category" items="${categoryList}">
-                        <option value="${category.id}">${category.category}</option>
-                    </c:forEach>
-                </select>
+                <select class="form-select" id="category" name="category" required></select>
             </div>
             <div class="mb-3">
                 <label for="image1" class="form-label">Imagem 1</label>
@@ -88,8 +67,12 @@
 </main>
 
 <div id="footer"></div>
-<script src="js/components/navbar.js" type="module"></script>
-<script src="js/components/footer.js" type="module"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="../../assets/js/components/navbar.js" type="module"></script>
+<script src="../../assets/js/components/footer.js" type="module"></script>
+<script src="../../assets/js/news/createNews.js" type="module"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
