melhorias de legibilidade nas telas index e updateCategory

--- a/newsWebsite/src/main/webapp/views/category/updateCategory.html
+++ b/newsWebsite/src/main/webapp/views/category/updateCategory.html
@@ -17,7 +17,20 @@
 
     <div id="error-message"></div>
 
-    <div id="update-category"></div>
+    <div class="container-login pt-1 pb-5 my-5">
+        <h1 class="my-5 text-center">Atualizar Categoria</h1>
+
+        <div class="container form-container">
+            <form method="post" id="updateCategoryForm">
+                <input type="hidden" name="id" id="id">
+                <div class="mb-3">
+                    <label for="categoryName" class="form-label">Categoria: </label>
+                    <input class="form-control" id="categoryName" name="categoryName">
+                </div>
+                <button type="submit" class="btn btn-secondary px-4">Enviar</button>
+            </form>
+        </div>
+    </div>
 
 </main>
 <div id="footer"></div>
