--- a/newsWebsite/src/main/webapp/views/news/newsSearch.html
+++ b/newsWebsite/src/main/webapp/views/news/newsSearch.html
@@ -14,11 +14,8 @@
     <div id="nav-bar"></div>
         <main class="container">
             <h1 class="my-5 text-center">Notícias</h1>
-            <div id="news">
-                <div class="p-4 p-md-5 mb-4 rounded border text-body-emphasis bg-body-tertiary" id="newsSearched">
 
-                </div>
-            </div>
+            <div id="news"></div>
         </main>
 
     <div id="footer"></div>
